--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AIB-wN-uwu">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Camera View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RCT_CameraViewController" customModule="Reacture" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -20,6 +22,129 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="171" y="394"/>
+        </scene>
+        <!--Edit View Controller-->
+        <scene sceneID="bJa-TL-fS9">
+            <objects>
+                <viewController id="AIB-wN-uwu" customClass="RCT_EditViewController" customModule="Reacture" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tcH-JP-lDO"/>
+                        <viewControllerLayoutGuide type="bottom" id="4tb-8G-sTv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ccv-AG-wNT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Cic-M0-iRh">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="8L8-GF-PZR">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="61"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOn-dm-Wdw">
+                                                <rect key="frame" x="16" y="21" width="30" height="32"/>
+                                                <state key="normal" title="X"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHo-cf-Zad">
+                                                <rect key="frame" x="534" y="21" width="50" height="32"/>
+                                                <state key="normal" title="Upload"/>
+                                            </button>
+                                        </subviews>
+                                        <edgeInsets key="layoutMargins" top="21" left="16" bottom="8" right="16"/>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
+                                        <rect key="frame" x="0.0" y="61" width="600" height="362"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4oO-z3-g1R">
+                                                <rect key="frame" x="99" y="126" width="240" height="128"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qpj-PE-9Wz">
+                                        <rect key="frame" x="0.0" y="423" width="600" height="117"/>
+                                        <connections>
+                                            <segue destination="BZJ-cT-0Rw" kind="embed" id="pmK-ua-5nR"/>
+                                        </connections>
+                                    </containerView>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y2p-AU-EyF">
+                                        <rect key="frame" x="0.0" y="540" width="600" height="60"/>
+                                        <items>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="Hrk-74-gZP"/>
+                                            <barButtonItem title="Layout" id="Jxs-yj-rgW"/>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="yWJ-RZ-igh"/>
+                                            <barButtonItem title="Filter" id="R8C-Lz-DjJ"/>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="qrP-rS-XcK"/>
+                                            <barButtonItem title="  Emojis " id="qyw-Ry-iYj"/>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="2n0-j1-FbY"/>
+                                        </items>
+                                    </toolbar>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4tb-8G-sTv" firstAttribute="top" secondItem="Cic-M0-iRh" secondAttribute="bottom" id="1bE-Dg-jeo"/>
+                            <constraint firstItem="Cic-M0-iRh" firstAttribute="top" secondItem="Ccv-AG-wNT" secondAttribute="top" id="5UU-cf-GtV"/>
+                            <constraint firstItem="Cic-M0-iRh" firstAttribute="leading" secondItem="Ccv-AG-wNT" secondAttribute="leading" id="AHb-Qt-xrd"/>
+                            <constraint firstAttribute="trailing" secondItem="Cic-M0-iRh" secondAttribute="trailing" id="GTA-Xu-pLS"/>
+                            <constraint firstItem="y2p-AU-EyF" firstAttribute="height" secondItem="Ccv-AG-wNT" secondAttribute="height" multiplier="0.1" id="IAm-mh-46Y"/>
+                            <constraint firstItem="Qpj-PE-9Wz" firstAttribute="height" secondItem="Ccv-AG-wNT" secondAttribute="height" multiplier="0.2" id="ZbN-Hk-ADg"/>
+                            <constraint firstItem="8L8-GF-PZR" firstAttribute="height" secondItem="Ccv-AG-wNT" secondAttribute="height" multiplier="0.1" id="bJh-O5-D4z"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nsu-dD-PNJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="812" y="394"/>
+        </scene>
+        <!--Container View Controller-->
+        <scene sceneID="FRA-js-Q9i">
+            <objects>
+                <viewController id="BZJ-cT-0Rw" customClass="RCT_ContainerViewController" customModule="Reacture" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DRd-DO-mu5">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="117"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UHf-sB-kob">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="117"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="C5X-Qi-d5N">
+                                    <size key="itemSize" width="58" height="52"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OptionItemCell" id="e8N-iX-Hld" customClass="RCT_OptionItemCollectionViewCell" customModule="Reacture" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="58" height="52"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="58" height="52"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BZJ-cT-0Rw" id="07w-9g-TyA"/>
+                                    <outlet property="delegate" destination="BZJ-cT-0Rw" id="iqA-e6-1D2"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="UHf-sB-kob" secondAttribute="trailing" id="8q7-mQ-CUC"/>
+                            <constraint firstItem="UHf-sB-kob" firstAttribute="leading" secondItem="DRd-DO-mu5" secondAttribute="leading" id="En8-XI-zV9"/>
+                            <constraint firstItem="UHf-sB-kob" firstAttribute="top" secondItem="DRd-DO-mu5" secondAttribute="top" id="KCe-5L-g02"/>
+                            <constraint firstAttribute="bottom" secondItem="UHf-sB-kob" secondAttribute="bottom" id="hma-yg-LzB"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m2P-GJ-1jg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="821" y="829"/>
         </scene>
     </scenes>
 </document>
