Container View show/hide implemented

--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -90,18 +90,18 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Cic-M0-iRh">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="209"/>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="279"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qpj-PE-9Wz">
-                                        <rect key="frame" x="0.0" y="209" width="600" height="208"/>
+                                    <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qpj-PE-9Wz">
+                                        <rect key="frame" x="0.0" y="279" width="600" height="0.0"/>
                                         <connections>
                                             <segue destination="BZJ-cT-0Rw" kind="embed" id="pmK-ua-5nR"/>
                                         </connections>
                                     </containerView>
-                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y2p-AU-EyF">
-                                        <rect key="frame" x="0.0" y="417" width="600" height="184"/>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y2p-AU-EyF">
+                                        <rect key="frame" x="0.0" y="279" width="600" height="322"/>
                                         <items>
                                             <barButtonItem style="plain" systemItem="flexibleSpace" id="Hrk-74-gZP"/>
                                             <barButtonItem image="topBottomUnselected" id="Jxs-yj-rgW">
@@ -121,6 +121,7 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Qpj-PE-9Wz" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="bottom" id="5ob-h2-dhb"/>
+                                    <constraint firstItem="y2p-AU-EyF" firstAttribute="top" secondItem="Qpj-PE-9Wz" secondAttribute="top" id="cSo-PX-aed"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -134,6 +135,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cVToptoToolbarTopConstraint" destination="cSo-PX-aed" id="WpV-OE-2RN"/>
                         <outlet property="containerView" destination="Qpj-PE-9Wz" id="jjA-NK-jL9"/>
                         <outlet property="filterButton" destination="R8C-Lz-DjJ" id="QkE-Ag-dXq"/>
                         <outlet property="layoutButton" destination="Jxs-yj-rgW" id="Vvg-jy-Wov"/>
@@ -153,11 +155,11 @@
                         <viewControllerLayoutGuide type="bottom" id="zum-XO-imT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="DRd-DO-mu5">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="208"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="0.0"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UHf-sB-kob">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="208"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="0.0"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="C5X-Qi-d5N">
                                     <size key="itemSize" width="58" height="52"/>
